fix socials color on mobile navbar menu

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,6 +72,12 @@
   color: #ffffff;
 }
 
+@media (max-width: 1024px) {
+  .navbar-menu .socials a {
+    color: #363636;
+  }
+}
+
 .socials a:hover {
   transform: scale(1.2);
 }
